Fixes nav item visibility bug

--- a/src/styles/components/hero.scss
+++ b/src/styles/components/hero.scss
@@ -4,8 +4,12 @@
   background-repeat: no-repeat;
   background-size: 410%;
   height: 100%;
-  padding-top: 360px;
+  padding-top: 440px;
   width: 100%;
+
+  @media only screen and (min-width : 768px) {
+    padding-top: 710px;
+  }
 }
 
 .hero-headings-wrapper {
@@ -14,12 +18,23 @@
 }
 
 .hero-headshot {
-  bottom: 12px;
-  left: 72px;
+  bottom: 40px;
+  display: none;
+  left: 16px;
   opacity: 1;
-  width: 245px;
   position: absolute;
+  width: 245px;
   z-index: 100;
+
+  @media only screen and (min-width : 768px) {
+    display: block;
+  }
+}
+
+.hero-heading-bar-wrapper {
+  @media only screen and (min-width : 768px) {
+    margin-left: 100px;
+  }
 }
 
 .hero-heading-bar {
@@ -34,6 +49,10 @@
   padding-right: 1.2em;
   width: 270px;
   text-align: right;
+
+  @media only screen and (min-width : 768px) {
+    width: 60%;
+  }
 }
 
 .hero-subheading-bar {
@@ -47,8 +66,14 @@
   padding-left: 1.5em;
   position: absolute;
   top: 48px;
-  width: 98%;
+  width: 83%;
   text-align: right;
+
+  @media only screen and (min-width : 768px) {
+    top: 60px;
+    width: 80%;
+  }
+
 }
 
 .hero-subheading-location {
